--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Welcome</h1>
-    <a href="./first_page.html" target="_blank">First page  </a><br>
-    <a href="./second_page.html" target="_blank">   Second page</a>
+    <button name="btn_1"><a href="./first_page.html" target="_blank">First page  </a><br></button>
+    <button name="btn_2"><a href="./second_page.html" target="_blank">   Second page</a></button>
+    
 </body>
 </html>
