--- a/first_try/frame1.html
+++ b/first_try/frame1.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./new_style.css">
     <title>Form</title>
 </head>
 <body>
     <center><h1>Welcome to the registration page</h1><br></center><hr>
-    <form action="">
+    <form action="" class="f1">
         <table>
             <tr>
                 <td>Name: </td>
@@ -80,7 +81,7 @@
             </tr>
         </table>
     </form>
-    <mark>delete</mark>
+    <!-- <mark>delete</mark> -->
     
 </body>
 </html>
