--- a/food_store/index.html
+++ b/food_store/index.html
@@ -8,6 +8,25 @@
     <title>Food Store</title>
 </head>
 <body>
+    <!-- header section start-->
+     <header>
+        <div class="max-w-[100%] bg-[url(https://ik.imagekit.io/troja/revamp/food_store/foodmunch-banner-bg.png_updatedAt=1745939013497?updatedAt=1769526921269)] bg-cover h-screen">
+            <div class="w-[80%] mx-auto py-15 flex flex-col justify-center items-center gap-5 h-full">
+                <h2 class="text-white text-[45px]">
+                    Get Delicious Food Anytime
+                </h2>
+                <p class="text-white text-16px">
+                    Eat Smart & Healthy
+                </p>
+                <div class="flex justify-center items-center gap-5">
+                 <button class="text-[16px] text-white bg-gradient-to-b from-[#d0b200] to-[#a58d00]  rounded-lg px-5 py-3">View Menu</button>
+                 <button class="text-[16px] text-[#d0b200] border-[1px] border-[#d0b200] rounded-lg px-5 py-3">Order Now</button>
+                </div>
+            </div>
+        </div>
+
+     </header>
+     <!-- header section end-->
     <!-- Why Choose Us Start-->
      <section>
          <div class="max-w-[100%] bg-[#F9FBFE] py-15">
@@ -17,8 +36,10 @@
                     <h2 class="text-[28px] font-bold text-[#183b56]">Why Choose Us?</h2>
                     <p class="text-[16px] font-normal text-[#5a7184]">We use both original recipes and classic versions of famous food items.</p>
                 </div>
+            </div>
+                <div class="w-[80%] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 ">
                 <!-- card1 -->
-                <div class="bg-[#FFFFFF] border border-gray-200 rounded-2xl p-[15px] flex flex-col justify-center items-center ">
+                <div class="bg-[#FFFFFF] border border-gray-200 rounded-2xl p-[15px] flex flex-col justify-center items-center gap-4">
                     <img src="https://ik.imagekit.io/troja/revamp/food_store/food-serve.png?updatedAt=1769526895816" alt="food-serve">
                     <h2 class="text-[22px]/[26px] text-[#323f4b] font-medium">Food Service</h2>
                     <p class="text-center text-[16px] text-[#7b8794] font-normal ">
@@ -26,7 +47,7 @@
                     </p>
                 </div>
                 <!-- card 2 -->
-                <div class="bg-[#FFFFFF] border border-gray-200 rounded-2xl p-[15px] flex flex-col justify-center items-center ">
+                <div class="bg-[#FFFFFF] border border-gray-200 rounded-2xl p-[15px] flex flex-col justify-center items-center gap-4 ">
                     <img src="https://ik.imagekit.io/troja/revamp/food_store/fruits-img.png?updatedAt=1769527384667" alt="fruits">
                     <h2 class="text-[22px]/[26px] text-[#323f4b] font-medium">Fresh Food</h2>
                     <p class="text-center text-[16px] text-[#7b8794] font-normal">
@@ -34,7 +55,7 @@
                     </p>
                 </div>
                 <!-- card 3 -->
-                <div class="bg-[#FFFFFF] border border-gray-200 rounded-2xl p-[15px] flex flex-col justify-center items-center ">
+                <div class="bg-[#FFFFFF] border border-gray-200 rounded-2xl p-[15px] flex flex-col justify-center items-center gap-4 ">
                     <img src="https://ik.imagekit.io/troja/revamp/food_store/offers-img.png?updatedAt=1769526942014" alt="offers-img">
                     <h2 class="text-[22px]/[26px] text-[#323f4b] font-medium">Offers</h2>
                     <p class="text-center text-[16px] text-[#7b8794] font-normal">
@@ -42,6 +63,7 @@
                     </p>
                 </div>
             </div>
+            
         </div>
      </section>
     <!-- Why Choose Us End-->
@@ -130,9 +152,9 @@
     <!-- Payment card start -->
      <div class="max-w-[100%] py-15">
         <div class="w-[80%] mx-auto grid grid-cols-1 md:grid-cols-2 ">
-            <div class="flex flex-col items-start space-y-3">
-                    <h2 class="text-[28px] text-[#183b56] font-bold">Fresh, Healthy, Organic, Delicious Fruits</h2>
-                    <p class="text-[16px] text-[#5a7184] font-normal">Say no to harmful chemicals and go fully organic with our range of fresh fruits and veggies. Pamper your body and your senses with the true and unadulterated gifts from mother nature. with the true and unadulterated gifts from mother nature.</p>
+            <div class="flex flex-col items-start space-y-3 order-2 md:order-1 ">
+                    <h2 class="text-[28px] text-[#183b56] font-bold">Delivery and Payment</h2>
+                    <p class="text-[16px] text-[#5a7184] font-normal">Enjoy hassle-free payment with the plenitude of payment options available for you. Get live tracking and locate your food on a live map. It's quite a sight to see your food arrive to your door. Plus, you get a 5% discount on every order every time you pay online.</p>
                     <button class="text-[16px] text-white bg-gradient-to-b from-[#d0b200] to-[#a58d00] border rounded-lg px-5 py-3">Order Now</button>
                     <div class="flex space-x-5">
                         <img src="https://ik.imagekit.io/troja/revamp/food_store/visa-card-img.png?updatedAt=1769580376969" alt="visa-img" class="size-15 ">
@@ -141,8 +163,10 @@
                         <img src="https://ik.imagekit.io/troja/revamp/food_store/american-express-img.png?updatedAt=1769580440350" alt="american-express-img" class="size-15 ">
                     </div>
              </div>
+             <div class="flex justify-center items-center order-1 md:order-2">
              <img src="https://ik.imagekit.io/troja/revamp/food_store/delivery-payment-section-img.png?updatedAt=1769580356039" alt="offers-img" class="w-[270px] "> 
-        </div>
+                </div>
+            </div>
     </div>    
     <!-- Payment card start -->
     <!-- thank you-card start-->
