--- a/food_store/index.html
+++ b/food_store/index.html
@@ -37,7 +37,7 @@
                     <p class="text-[16px] font-normal text-[#5a7184]">We use both original recipes and classic versions of famous food items.</p>
                 </div>
             </div>
-                <div class="w-[80%] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 ">
+                <div class="w-[80%] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 py-5">
                 <!-- card1 -->
                 <div class="bg-[#FFFFFF] border border-gray-200 rounded-2xl p-[15px] flex flex-col justify-center items-center gap-4">
                     <img src="https://ik.imagekit.io/troja/revamp/food_store/food-serve.png?updatedAt=1769526895816" alt="food-serve">
