modified target for the navigation

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,11 +18,11 @@
                 <!--Tab & Other Nav bar starts -->
                 <div class="md:grid hidden  ">
                     <div class="flex justify-between items-center">
-                        <a href="./pages/about.html" class="hover:text-blue-600" target="_blank">About</a>
-                        <a href="./pages/projects.html" class="hover:text-blue-600" target="_blank">Projects</a>
-                        <a href="./pages/resume.html" class="hover:text-blue-600" target="_blank">Resume</a>
-                        <a href="./pages/tools.html" class="hover:text-blue-600" target="_blank">Tools</a>
-                        <a href="./pages/contact.html" class="hover:text-blue-600" target="_blank">Contact</a>
+                        <a href="./pages/about.html" class="hover:text-blue-600"  >About</a>
+                        <a href="./pages/projects.html" class="hover:text-blue-600"  >Projects</a>
+                        <a href="./pages/resume.html" class="hover:text-blue-600"  >Resume</a>
+                        <a href="./pages/tools.html" class="hover:text-blue-600"  >Tools</a>
+                        <a href="./pages/contact.html" class="hover:text-blue-600" >Contact</a>
                     </div>
                     
                 </div>
@@ -34,7 +34,7 @@
             <section class="w-full mx-auto grid grid-cols-1 md:grid-cols-2 gap-5 px-5 py-5">    
                 <p class="flex flex-col justify-center items-center gap-5">
                     Hello! I'm Roja Nandhini, a passionate web developer with a knack for creating dynamic and user-friendly websites. With a strong foundation in HTML, CSS, and JavaScript, I specialize in building responsive designs that look great on any device. My goal is to combine creativity with functionality to deliver exceptional web experiences. Let's build something amazing together!
-                    <a href="./pages/" class="bg-blue-500 text-white rounded-lg px-5 py-3">Let's connect</a>
+                    <a href="./pages/contact.html" class="bg-blue-500 text-white rounded-lg px-5 py-3">Let's connect</a>
                 </p>
                 <img src="../roja.png" alt="my_image" class="w-[250px] h-[250px] mx-auto rounded-full">
             </section>
@@ -55,11 +55,11 @@
             <!--Mobile Nav bar starts -->
             <div class="w-[75%] md:hidden bottom-5 left-10 mx-auto fixed bg-white py-3 px-5 rounded-full shadow-lg">
                    <div class="flex justify-between items-center">
-                        <a href="./pages/about.html" class="hover:text-blue-600" target="_blank">About</a>
-                        <a href="./pages/projects.html" class="hover:text-blue-600" target="_blank">Projects</a>
-                        <a href="./pages/resume.html" class="hover:text-blue-600" target="_blank">Resume</a>
-                        <a href="./pages/tools.html" class="hover:text-blue-600" target="_blank">Tools</a>
-                        <a href="./pages/contact.html" class="hover:text-blue-600" target="_blank">Contact</a>
+                        <a href="./pages/about.html" class="hover:text-blue-600" >About</a>
+                        <a href="./pages/projects.html" class="hover:text-blue-600" >Projects</a>
+                        <a href="./pages/resume.html" class="hover:text-blue-600" >Resume</a>
+                        <a href="./pages/tools.html" class="hover:text-blue-600"  >Tools</a>
+                        <a href="./pages/contact.html" class="hover:text-blue-600" >Contact</a>
                     </div>
                     
             </div>
