--- a/Portfolio/pages/about.html
+++ b/Portfolio/pages/about.html
@@ -18,11 +18,11 @@
                 <!--Tab & Other Nav bar starts -->
                 <div class="md:grid hidden  ">
                     <div class="flex justify-between items-center">
-                        <a href="../index.html" class="hover:text-blue-600" target="_blank">Home</a>
-                        <a href="./projects.html" class="hover:text-blue-600" target="_blank">Projects</a>
-                        <a href="./resume.html" class="hover:text-blue-600" target="_blank">Resume</a>
-                        <a href="./tools.html" class="hover:text-blue-600" target="_blank">Tools</a>
-                        <a href="./contact.html" class="hover:text-blue-600" target="_blank">Contact</a>
+                        <a href="../index.html" class="hover:text-blue-600" >Home</a>
+                        <a href="./projects.html" class="hover:text-blue-600" >Projects</a>
+                        <a href="./resume.html" class="hover:text-blue-600" >Resume</a>
+                        <a href="./tools.html" class="hover:text-blue-600" >Tools</a>
+                        <a href="./contact.html" class="hover:text-blue-600" >Contact</a>
                     </div>
                     
                 </div>
@@ -60,11 +60,11 @@
             <!--Mobile Nav bar starts -->
             <div class="w-[75%] md:hidden bottom-5 left-10 mx-auto fixed bg-white py-3 px-5 rounded-full shadow-lg">
                    <div class="flex justify-between items-center">
-                        <a href="../index.html" class="hover:text-blue-600" target="_blank">Home</a>
-                        <a href="./projects.html" class="hover:text-blue-600" target="_blank">Projects</a>
-                        <a href="./resume.html" class="hover:text-blue-600" target="_blank">Resume</a>
-                        <a href="./tools.html" class="hover:text-blue-600" target="_blank">Tools</a>
-                        <a href="./contact.html" class="hover:text-blue-600" target="_blank">Contact</a>
+                        <a href="../index.html" class="hover:text-blue-600" >Home</a>
+                        <a href="./projects.html" class="hover:text-blue-600" >Projects</a>
+                        <a href="./resume.html" class="hover:text-blue-600" >Resume</a>
+                        <a href="./tools.html" class="hover:text-blue-600" >Tools</a>
+                        <a href="./contact.html" class="hover:text-blue-600" >Contact</a>
                     </div>
                     
             </div>
