deployed portfolio in the firebase

--- a/Portfolio/public/index.html
+++ b/Portfolio/public/index.html
@@ -36,7 +36,7 @@
                     Hello! I'm Roja Nandhini, a passionate web developer with a knack for creating dynamic and user-friendly websites. With a strong foundation in HTML, CSS, and JavaScript, I specialize in building responsive designs that look great on any device. My goal is to combine creativity with functionality to deliver exceptional web experiences. Let's build something amazing together!
                     <a href="./pages/contact.html" class="bg-blue-500 text-white rounded-lg px-5 py-3">Let's connect</a>
                 </p>
-                <img src="../roja.png" alt="my_image" class="w-[250px] h-[250px] mx-auto rounded-full">
+                <img src="./projects/roja.png" alt="my_image" class="w-[250px] h-[250px] mx-auto rounded-full">
             </section>
             <!-- hero section ends -->
             <!-- footer section starts -->
