--- a/Portfolio/public/pages/about.html
+++ b/Portfolio/public/pages/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/Satoshi_Complete/Fonts/WEB/css/satoshi.css">
 </head>
 <body>
-   <div class="max-w-[100%] py-5 bg-slate-200 h-screen">
+   <div class="max-w-[100%] py-5 bg-slate-200 min-h-screen">
         
         <div class=" w-[65%] mx-auto rounded-xl bg-white px-5 py-5 ">
            <!-- header section starts -->
