--- a/Portfolio/public/pages/tools.html
+++ b/Portfolio/public/pages/tools.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/Satoshi_Complete/Fonts/WEB/css/satoshi.css">
 </head>
 <body>
-    <div class="max-w-[100%] py-5 bg-slate-200 h-screen">
+    <div class="max-w-[100%] py-5 bg-slate-200 min-h-screen">
         
         <div class=" w-[65%] mx-auto rounded-xl bg-white px-5 py-5 ">
            <!-- header section starts -->
@@ -33,7 +33,7 @@
             <!-- header section ends -->
             <!-- hero section starts -->
             <section class="w-full mx-auto grid grid-cols-1 gap-5 px-5 py-5">    
-                  <div class="skills grid grid-cols-4 gap-5 justify-items-center">
+                  <div class="skills grid grid-cols-2 md:grid-cols-4 gap-5 justify-items-center">
                         <img src="https://skillicons.dev/icons?i=html" alt="HTML5">
                         <img src="https://skillicons.dev/icons?i=css" alt="CSS3">
                         <img src="https://skillicons.dev/icons?i=js" alt="JavaScript">
