--- a/tourism/page.html
+++ b/tourism/page.html
@@ -11,26 +11,29 @@
         
     <div class="bg-[url(https://ik.imagekit.io/troja/revamp/tourism/taj-mahal?updatedAt=1769356794213)] w-[300px] h-[600px] bg-contain bg-no-repeat ">
     <h2 class="text-white text-lg p-2">Favorite Places</h2>
+    <!-- Tajmahal card -->
     <div class="flex flex-row items-center justify-between rounded-md bg-white mt-2 mb-4 mx-2 px-3 py-2">
-        <div >
-            <p class="text-[#0504ff] text-[14px]">Taj Mahal</p>
-            <p class="text-[12px] text-gray-500">Lorem, ipsum dolor</p>
+        <div class="box">
+            <a href="./tajmahal.html" class="text-[#0504ff] text-[14px] hover:-translate-y-1 transition-transform duration-300 inline-block">Taj Mahal</a>
+            <p class="text-[12px] text-gray-500">The Taj Mahal ('Crown of the Palace') is an ivory-white marble mausoleum on the right bank of the river Yamuna in Agra, Uttar Pradesh, India. It was commissioned in 1631 by the fifth Mughal emperor, Shah Jahan (r. 1628–1658), to house the tomb of his beloved wife, Mumtaz Mahal; it also houses the tomb of Shah Jahan himself. The tomb is the centrepiece of a 17-hectare (42-acre) complex, which includes a mosque and a guest house, and is set in formal gardens bounded on three sides by a crenellated wall.</p>
         </div>
         <img class="w-15 m-2" src="https://ik.imagekit.io/troja/revamp/tourism/taj-mahal-building?updatedAt=1769356913502" alt="Taj-mahal">
     </div>
-        <div class="flex flex-row items-center justify-between rounded-md bg-white my-4 mx-2 px-3 py-2">
-        <div >
-            <p class="text-[#0504ff] text-[14px]">Taj Mahal</p>
-            <p class="text-[12px] text-gray-500">Lorem, ipsum dolor</p>
+        <!-- red fort card -->
+        <div class="flex flex-row items-center justify-between rounded-md bg-white mt-2 mb-4 mx-2 px-3 py-2">
+        <div class="box">
+            <a href="./redfort.html" class="text-[#0504ff] text-[14px] hover:-translate-y-1 transition-transform duration-300 inline-block">Red Fort</a>
+            <p class="text-[12px] text-gray-500">The Red Fort is a UNESCO World Heritage Site in Delhi, India. It was built by the Mughal Emperor Shah Jahan in 1638 and is a symbol of the Mughal Empire's grandeur and architectural brilliance.</p>
         </div>
-        <img class="w-15 m-2" src="https://ik.imagekit.io/troja/revamp/tourism/taj-mahal-building?updatedAt=1769356913502" alt="Taj-mahal">
+        <img class="w-15 h-10 m-2 object-center" src="https://ik.imagekit.io/troja/revamp/tourism/images_q=tbn:ANd9GcQAldl2HhE60uhDMulXPoOxE-rEEHNvcWlpEQ&s" alt="Red Fort">
     </div>
-    <div class="flex flex-row items-center justify-between rounded-md bg-white my-4 mx-2 px-3 py-2">
-        <div >
-            <p class="text-[#0504ff] text-[14px]">Taj Mahal</p>
-            <p class="text-[12px] text-gray-500">Lorem, ipsum dolor</p>
+    <!-- india gate card -->
+    <div class="flex flex-row items-center justify-between rounded-md bg-white mt-2 mb-4 mx-2 px-3 py-2">
+        <div class="box">
+            <a href="./indiagate.html" class="text-[#0504ff] text-[14px] hover:-translate-y-1 transition-transform duration-300 inline-block">India Gate</a>
+            <p class="text-[12px] text-gray-500">The India Gate is a war memorial located in New Delhi, India. It was built in 1931 to commemorate the 90,000 soldiers of the British Indian Army who died in World War I and the Third Anglo-Afghan War.</p>
         </div>
-        <img class="w-15 m-2" src="https://ik.imagekit.io/troja/revamp/tourism/taj-mahal-building?updatedAt=1769356913502" alt="Taj-mahal">
+        <img class="w-15 m-2" src="https://ik.imagekit.io/troja/revamp/tourism/3c.jpg" alt="India Gate">
     </div>
     <button class="bg-black text-white rounded-md py-2 px-6 text-[12px] mx-2 my-2"><a href="./index.html">Back</a></button>
     </div>
