--- a/js_projects/assign4.html
+++ b/js_projects/assign4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="w-full bg-gradient-to-br from-cyan-500 to-fuchsia-600 min-h-screen py-5">
-         <h1 class="text-3xl font-bold text-white text-center">Bacon Data</h1>
+         <h1 class="text-3xl font-bold text-white text-center py-3">Bacon Data</h1>
         <div id="bacon" class="w-[80%] backdrop-blur-[5px] bg-white/30 rounded-lg mx-auto px-8 py-10">
            
         </div>
