--- a/food_store/index.html
+++ b/food_store/index.html
@@ -40,7 +40,7 @@
                     Eat Smart & Healthy
                 </p>
                 <div class="flex justify-center items-center gap-5">
-                 <button class="text-[16px] text-white bg-gradient-to-b from-[#d0b200] to-[#a58d00]  rounded-lg px-5 py-3">View Menu</button>
+                 <button class="text-[16px] text-white bg-gradient-to-b from-[#d0b200] to-[#a58d00]  rounded-lg px-5 py-3" ><a href="#explore">View Menu</a></button>
                  <button class="text-[16px] text-[#d0b200] border-[1px] border-[#d0b200] rounded-lg px-5 py-3">Order Now</button>
                 </div>
             </div>
